# libamc

./: ChangeLog  Makefile.am  README  README.md  configure.ac  libamc.pc.in  libamc.spec
doc/: Doxyfile
src/: Makefile.am  amc.c  amc.h  crc.c  crc.h  serial.c  serial.h
tests/: Makefile.am  test-amc.c
